# codrha_local_planner

./: CMakeLists.txt  README.md  blp_plugin.xml  package.xml
cfg/: CODRHAPlanner.cfg
doc/: Doxyfile  api.md
include/codrha_local_planner/: codrha_comm.h  codrha_comm_ros.h  codrha_controller.h  codrha_planner.h  codrha_planner_ros.h  common.h  monocycle_flatoutput.h  trajectory.h
log/: cmmd_log_CODRHAPlannerROS.yaml  fb_log_CODRHAPlannerROS.yaml  opt_log_CODRHAPlannerROS.yaml  traj_log_CODRHAPlannerROS.yaml  traj_log_map_CODRHAPlannerROS.yaml
log/demo/: traj_log_CODRHAPlannerROS0.yaml  traj_log_tb00_CODRHAPlannerROS.yaml  traj_log_tb00_CODRHAPlannerROS_fmap.yaml
msg/: trajectory_msg.msg
src/: codrha_comm_ros.cpp  codrha_controller.cpp  codrha_planner.cpp  codrha_planner_ros.cpp
test/: plot_demo_results.py  plot_multrob.py  plot_multrob_sim.py  plot_rearanged_fb.py  plot_traj.py  plot_traj_cost_const.py  plot_traj_ros.py  program  rearange_cmd.py  rearange_cmd_ros.py  rearange_fb_ros.py  send_objective_to_turtlebot00.sh  send_objectives_to_turtlebots.sh  testCoddwaController.cpp  testCoddwaPlanner.cpp  testCoddwaPlannerConstraints.cpp  testCoddwaPlannerCostConst.cpp  testCoddwaTraj.cpp
